hphp/hack/test/typecheck/nameof/constexpr.php.exp
ERROR: File "constexpr.php", line 9, characters 21-33:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 10, characters 21-33:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 11, characters 24-36:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 12, characters 24-36:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 11, characters 24-36:
Illegal constant value (Naming[2023])
ERROR: File "constexpr.php", line 12, characters 24-36:
Illegal constant value (Naming[2023])
ERROR: File "constexpr.php", line 6, characters 21-28:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "constexpr.php", line 8, characters 21-31:
Using `self::class` in this position will trigger an implicit runtime conversion to string, please use `nameof self` (Typing[4482])
ERROR: File "constexpr.php", line 10, characters 21-33:
Using `parent::class` in this position will trigger an implicit runtime conversion to string, please use `nameof parent` (Typing[4482])
